<resources>
    <string name="app_name">LvLea</string>
    <string name="contact_us">Contact us!</string>
    <string name="faqs">FAQS</string>
    <string name="about">About project</string>
    <string name="contact_message">Have a question or suggestion?</string>
    <string name="subject">Subject:</string>
    <string name="message">Message:</string>
    <string name="send_mail">Send Mail</string>
    <string name="write_message">Write your message</string>
    <string name="profile_item">Profile</string>
    <string name="opportunity_item">Opportunity</string>
    <string name="search_item">Search</string>
    <string name="message_item">Inbox</string>
    <string name="setting_item">Setting</string>
    <string name="fb_help_item">Help and Feedback</string>
    <string name="config_item">Configuration</string>
    <string name="choose_mail">Select Mail Client</string>
    <string name="hello_Message">Hello Message!</string>
    <string name="hello_Feedback">Hello Feedback!</string>
    <string name="btnState">Active</string>
    <string name="tvState">Active</string>
    <string name="Active">Active</string>
    <string name="Inactive">Inactive</string>
    <string name="tvState_header">Active</string>
    <string name="title_activity_main__profile">Main_Profile</string>
    <string name="title_activity_main__settings">Main_Settings</string>
    <string name="title_activity_main__opportunity">Main_Opportunity</string>
    <string name="title_activity_main__message">Main_Message</string>
    <string name="title_activity_main__search">Main_Search</string>
    <string name="title_activity_main__log_out">Main_Log_out</string>
    <string name="title_activity_main__feedback">Main_Feedback</string>
    <string name="title_activity_about_activity">Main_About</string>
    <string name="title_activity_apply">Apply Activity</string>
    <string name="email_profile">Email account</string>
    <string name="register">Register</string>
    <string name="log_in">Login</string>
    <string name="cancel">Cancel</string>
    <string name="apply">Apply to Job</string>
    <string name="search">Search</string>
    <string name="tittle_register">Register</string>
    <string name="tittle_login">Login</string>
    <string name="forget_password">Forget password? </string>
    <string name="id">ID</string>
    <string name="password">Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">E-mail</string>
    <string name="retype_password">Retype Password</string>
    <string name="school">School</string>
    <string name="phone_number">Phone Number</string>
    <string name="country">Country</string>
    <string name="birth_day">Birthday</string>
    <string name="missing_values">Missing Values</string>
    <string name="password_match">Password doesnt match</string>
    <string name="job_area_prompt">Job Interest Area</string>
    <string-array name="job_arrays">
        <item>Health Sciences</item>
        <item>Architecture and Engineering</item>
        <item>Administration</item>
        <item>Information Technologies</item>
        <item>Social Sciences</item>
        <item>Hospitality</item>
        <item>Business Administration</item>
    </string-array>
    <string name="job_type_prompt">Job Type</string>
    <string-array name="job_type_arrays">
        <item>Full Time</item>
        <item>Partial Time</item>
        <item>Internship</item>
    </string-array>
    <string-array name="skills_information">
        <item>Analytics</item>
        <item>Analytical</item>
        <item>Applications</item>
        <item>Application Development</item>
        <item>Attention to Detail</item>
        <item>Architecture</item>
        <item>Big Data</item>
        <item>Business Analytics</item>
        <item>Business Intelligence</item>
        <item>Business Process Modeling</item>
        <item>Cloud Computing</item>
        <item>Code</item>
        <item>Coding</item>
        <item>Computer</item>
        <item>Communication</item>
        <item>Content Strategy</item>
        <item>Content Management</item>
        <item>Configuration</item>
        <item>Critical Thinking</item>
        <item>Customer Support</item>
        <item>Database</item>
        <item>Data Analysis</item>
        <item>Data Analytics</item>
        <item>Data Intelligence</item>
        <item>Data Mining</item>
        <item>Data Science</item>
        <item>Data Strategy</item>
        <item>Data Storage</item>
        <item>Database Administration</item>
        <item>Design</item>
        <item>Desktop Support</item>
        <item>Developer</item>
        <item>Development</item>
        <item>Documentation</item>
        <item>Emerging Technologies</item>
        <item>File Systems</item>
        <item>Flexibility</item>
        <item>Hardware</item>
        <item>Help Desk</item>
        <item>Implementation</item>
        <item>Internet</item>
        <item>Information Systems</item>
        <item>Installation</item>
        <item>Integrated Technologies</item>
        <item>IT Manager</item>
        <item>IT Optimization</item>
        <item>IT Security</item>
        <item>IT Soft Skills</item>
        <item>IT Solutions</item>
        <item>IT Support</item>
        <item>Languages</item>
        <item>Logical Thinking</item>
        <item>Leadership</item>
        <item>Linux</item>
        <item>Management</item>
        <item>Messaging</item>
        <item>Methodology</item>
        <item>Metrics</item>
        <item>Microsoft Office</item>
        <item>Mobile Applications</item>
        <item>Motivation</item>
        <item>Networks</item>
        <item>Network Operations</item>
        <item>Networking</item>
        <item>Operating Systems</item>
        <item>Operations</item>
        <item>Organization</item>
        <item>Presentation</item>
        <item>Programming</item>
        <item>Problem Solving</item>
        <item>Product Development</item>
        <item>Product Support</item>
        <item>Product Management</item>
        <item>Product Training</item>
        <item>Project Management</item>
        <item>Repairs</item>
        <item>Reporting</item>
        <item>Search Engine Optimization (SEO)</item>
        <item>Security</item>
        <item>Self Motivated</item>
        <item>Self Starting</item>
        <item>Servers</item>
        <item>Software</item>
        <item>Software Development</item>
        <item>Software Engineering</item>
        <item>Software Quality Assurance (QA)</item>
        <item>Storage</item>
        <item>Support</item>
        <item>Systems Software</item>
        <item>Team Building</item>
        <item>Team Oriented</item>
        <item>Teamwork</item>
        <item>Tech Skills Listed by Job</item>
        <item>Tech Support</item>
        <item>Technical</item>
        <item>Technology</item>
        <item>Technical Services</item>
        <item>Tech Skills Listed by Job</item>
        <item>Technical Support</item>
        <item>Technical Writing</item>
        <item>Testing</item>
        <item>Tools</item>
        <item>Time Management</item>
        <item>Technical Writing</item>
        <item>Training</item>
        <item>Troubleshooting</item>
        <item>UI / UX</item>
        <item>User Experience Design</item>
        <item>Virtualization</item>
        <item>Web</item>
        <item>Web Development</item>
        <item>Web Design</item>
        <item>Work Independently</item>
    </string-array>
    <string name="country_prompt">Select your Country</string>
</resources>