<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="5dp"
    android:layout_margin="10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/contact_message"
        android:id="@+id/contact_message"
        android:gravity="center_horizontal" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:weightSum="1">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/subject"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_marginTop="12dp"/>

            <EditText
                android:id="@+id/et_EmailAsunto"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
            </EditText>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/message"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_marginTop="10dp" />

            <EditText
                android:id="@+id/et_EmailMensaje"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:hint="@string/write_message"
                android:inputType="textMultiLine"
                android:lines="7"/>

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="@drawable/buttons_bg"
                android:text="@string/send_mail"
                android:id="@+id/btn_send_mail" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>
