<?xml version="1.0" encoding="utf-8"?>

<com.proy.jsdv.proylevelea.registration.SlidingRelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">




    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/tableLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:shrinkColumns="*"
        android:stretchColumns="*" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tittle_login"
            android:id="@+id/LoginTittle"
            android:layout_marginTop="30dp"
            android:textSize="48dp"
            android:typeface="monospace"
            android:gravity="center_horizontal|center"
            android:paddingBottom="100dp"

            />


        <TextView
            style=""
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email" >
        </TextView>

        <EditText
                android:id="@+id/email_et"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:layout_span="2"
                android:background="@drawable/border_tf_style"/>

        <TextView
                style=""
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password" >
            </TextView>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/password_et"
                android:layout_column="1"
                android:layout_span="2"
                android:background="@drawable/border_tf_style"/>



            <Button
                android:id="@+id/bn_log_in"
                android:layout_width="wrap_content"
                android:textSize="12sp"
                android:textColor="@color/white"
                android:background="@drawable/buttons_bg"
                android:layout_height="wrap_content"
                android:onClick="retrieveSampleData"
                android:text="@string/log_in" />

            <Button
                android:id="@+id/bn_cancel1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="toggleCancelLogIn"
                android:textSize="12sp"
                android:textColor="@color/white"
                android:background="@drawable/buttons_bg"
                android:text="@string/cancel"
                android:layout_column="2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/forget_password"
                android:layout_marginTop="22dp"
                android:id="@+id/F_password"
                android:gravity="center_horizontal" />


    </TableLayout>
</com.proy.jsdv.proylevelea.registration.SlidingRelativeLayout>
