<?xml version="1.0" encoding="utf-8"?>

<com.proy.jsdv.proylevelea.registration.SlidingRelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">
    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/tableLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:shrinkColumns="*"
        android:stretchColumns="*"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tittle_register"
            android:id="@+id/RegisterTittle"
            android:layout_marginTop="5dp"
            android:textSize="48dp"
            android:typeface="monospace"
            android:gravity="center_horizontal|center"

            />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                style=""
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/first_name"
                >
            </TextView>

            <EditText
                android:id="@+id/first_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                android:layout_span="2"
                android:background="@drawable/border_tf_style"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                style=""
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/last_name"
                >
            </TextView>

            <EditText
                android:id="@+id/last_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                android:layout_span="2"
                android:background="@drawable/border_tf_style"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                style=""
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/id"
               >
            </TextView>

            <EditText
                android:id="@+id/id_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                android:layout_span="2"
                android:background="@drawable/border_tf_style"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:id="@+id/email_textView"
                android:layout_column="0" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:id="@+id/email_field"
                android:layout_column="1"
                android:layout_span="2"
                android:background="@drawable/border_tf_style"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:id="@+id/password_textView"
                android:layout_column="0" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/password_field"
                android:layout_column="1"
                android:layout_span="2"
                android:background="@drawable/border_tf_style"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/retype_password"
                android:id="@+id/retype_password_textView"
                android:layout_column="0" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/retype_password_field"
                android:layout_column="1"
                android:layout_span="2"
                android:background="@drawable/border_tf_style"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                style=""
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/birth_day">
            </TextView>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:ems="10"
                android:id="@+id/birthday"
                android:layout_column="1"
                android:layout_span="2"
                android:background="@drawable/border_tf_style"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                style=""
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone_number" >
            </TextView>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:ems="10"
                android:id="@+id/phone_number"
                android:layout_column="1"
                android:layout_span="2"
                android:background="@drawable/border_tf_style"/>

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                style=""
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/country">
            </TextView>

            <Spinner
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:entries="@array/countries_array"
                android:prompt="@string/country_prompt"
                android:id="@+id/country_spinner"
                android:layout_column="1"
                android:layout_span="2" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/bn_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="postData"
                android:textSize="12sp"
                android:textColor="@color/white"
                android:background="@drawable/buttons_bg"
                android:text="@string/register"
                android:layout_column="0" />

            <Button
                android:id="@+id/bn_cancel2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textColor="@color/white"
                android:background="@drawable/buttons_bg"
                android:text="@string/cancel"
                android:layout_column="1"
                android:layout_span="2" />
        </TableRow>

    </TableLayout>
</com.proy.jsdv.proylevelea.registration.SlidingRelativeLayout>
