<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.proy.jsdv.proylevelea.menu.SearchFragment">
    



            <Spinner
                android:id="@+id/job_area_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/job_type_spinner"
                android:layout_alignRight="@+id/job_type_spinner"
                android:entries="@array/job_arrays"
                android:prompt="@string/job_area_prompt" />

            <Spinner
                android:id="@+id/job_type_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/job_area_spinner"
                android:layout_toLeftOf="@+id/search_btn"
                android:layout_toStartOf="@+id/search_btn"
                android:entries="@array/job_type_arrays"
                android:prompt="@string/job_type_prompt" />


            <Button
                android:id="@+id/search_btn"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_alignBottom="@+id/job_type_spinner"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:background="@drawable/buttons_bg"
                android:gravity="center_vertical|center"
                android:text="@string/search"
                android:textColor="@color/white"
                android:textSize="12sp" />

            <FrameLayout
                android:id="@+id/search_results_fragment"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:layout_alignBottom="@+id/search_btn"
                android:layout_alignParentBottom="true"></FrameLayout>

</RelativeLayout>
